major fixes
