# pkg/backend/common/sql-backend-constructor.go
@@ -8,6 +8,7 @@ import (
 	"github.com/apibrew/apibrew/pkg/backend/sqlbuilder"
 	"github.com/apibrew/apibrew/pkg/errors"
 	"github.com/apibrew/apibrew/pkg/model"
+	"github.com/apibrew/apibrew/pkg/modelnew"
 	"github.com/apibrew/apibrew/pkg/types"
 	"google.golang.org/protobuf/types/known/structpb"
 	"sync"
@@ -43,7 +44,7 @@ type SqlBackendOptions interface {
 	TypeModifier(propertyType model.ResourceProperty_Type) types.PropertyType
 }
 
-func NewSqlBackend(dataSource *model.DataSource, options SqlBackendOptions) abs.Backend {
+func NewSqlBackend(dataSource *modelnew.DataSource, options SqlBackendOptions) abs.Backend {
 	backend := &sqlBackend{
 		options:        options,
 		dataSourceName: dataSource.Name,
