# pkg/backend/postgres/constructor.go
@@ -3,12 +3,12 @@ package postgres
 import (
 	"github.com/apibrew/apibrew/pkg/abs"
 	"github.com/apibrew/apibrew/pkg/backend/common"
-	"github.com/apibrew/apibrew/pkg/model"
+	"github.com/apibrew/apibrew/pkg/modelnew"
 	_ "github.com/lib/pq"
 )
 
-func NewPostgresResourceServiceBackend(dataSource *model.DataSource) abs.Backend {
+func NewPostgresResourceServiceBackend(dataSource *modelnew.DataSource) abs.Backend {
 	return common.NewSqlBackend(dataSource, &postgreSqlBackendOptions{
-		connectionDetails: dataSource.Params.(*model.DataSource_PostgresqlParams),
+		dataSource: dataSource,
 	})
 }
